[gd_scene load_steps=8 format=3 uid="uid://voga8yba2ck1"]

[ext_resource type="Script" path="res://views/cogwheel_menu.gd" id="1_0mn4i"]
[ext_resource type="FontFile" uid="uid://brnqbntbxrjle" path="res://assets/UI/RifficFree-Bold.ttf" id="1_uex6k"]
[ext_resource type="Texture2D" uid="uid://jmm45xq8mgbp" path="res://assets/characters/pixel-background-fox.jpeg" id="2_clf1t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o2do8"]
bg_color = Color(0.462745, 0.858824, 0.988235, 1)
border_width_bottom = 3
border_color = Color(0.0235294, 0.270588, 0.439216, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.936

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0j63e"]
bg_color = Color(0.211765, 0.796078, 0.960784, 1)
border_width_bottom = 3
border_color = Color(0.0235294, 0.270588, 0.439216, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.936

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ks524"]
bg_color = Color(0.211765, 0.796078, 0.960784, 1)
border_width_bottom = 3
border_color = Color(0.0235294, 0.270588, 0.439216, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_offset = Vector2(1, 1)
anti_aliasing_size = 0.936

[sub_resource type="Theme" id="Theme_uq03d"]
default_font = ExtResource("1_uex6k")
Button/styles/hover = SubResource("StyleBoxFlat_o2do8")
Button/styles/normal = SubResource("StyleBoxFlat_0j63e")
Button/styles/pressed = SubResource("StyleBoxFlat_ks524")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_uq03d")
script = ExtResource("1_0mn4i")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_clf1t")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume_Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Resume Game"

[node name="Resolution" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Resolution"

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Controls"

[node name="Volume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Volume"

[node name="Main_Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume_Game" to="." method="_on_resume_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume_Game" to="." method="_on_language_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main_Menu" to="." method="_on_back_pressed"]
